--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
+    "react-resize-detector": "^4.2.3",
     "react-scripts": "3.4.1"
   },
   "scripts": {
