--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.1.4",
+    "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "bizcharts": "^4.0.2",
     "customize-cra": "^0.9.1",
