--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-resize-detector": "^4.2.3",
     "react-scripts": "3.4.1"
   },
+  "proxy": "http://localhost:8000",
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
